--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Carousel</a>
+      <a class="navbar-brand" href="#">QuickPC</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -83,15 +83,18 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link active" aria-current="page" href="#">Produtos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link active" aria-current="page" href="#">Localização</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Contatos</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <form class="d-flex" role="buscar">
+          <input class="form-control me-2" type="buscar" placeholder="Buscar" aria-label="Buscar">
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
       </div>
     </div>
@@ -113,8 +116,8 @@
         <div class="container">
           <div class="carousel-caption text-start">
             <h1>Compre seu PC Gamer</h1>
-            <p>Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            <p>Um dos maiores e-commerce de informática do Brasil, voltado principalmente ao mundo gamer.</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Adquirir</a></p>
           </div>
         </div>
       </div>
@@ -122,9 +125,9 @@
        <img src="img/banner2.png" width="100%">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <h1>Apaixonados por games, a QuickPC é especializada no mercado de PC’s Gamers</h1>
+            <p>Trabalhamos com computadores de extremo desempenho.</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Ver mais</a></p>
           </div>
         </div>
       </div>
@@ -133,9 +136,9 @@
 
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <h1>O nosso foco é no consumidor e nas tendências do mercado</h1>
+            <p>Com o objetivo de proporcionar uma experiência plena a seus clientes, a QuickPC preocupa-se com todos os detalhes da montagem, testes e entrega do computador adquirido, proporcionando o máximo conforto aos seus clientes, os quais somente terão o trabalho de se divertir.</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Ver mais</a></p>
           </div>
         </div>
       </div>
@@ -161,21 +164,30 @@
     <div class="row">
       <div class="col-lg-4">
         <img src="img/pc1.png" class="bd-placeholder-img bg-primary rounded-circle" width="140" height="140">
-        <h2 class="fw-normal">Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <h3 class="fw-normal">AMD RYZEN 3 3200G / 8GB DDR4 / SSD 512GB</h3>
+        <p>PC Gamer Level One
+			</br>Modelo: QCK0404
+			</br>Cor: Preta
+			</br>PN: 010000415</p>
+        <p><a class="btn btn-secondary" href="#">Ver Especificação Técnica &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
          <img src="img/pc2.png" class="bd-placeholder-img bg-danger rounded-circle" width="140" height="140">
-        <h2 class="fw-normal">Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <h3 class="fw-normal">AMD RYZEN 3 3200G / 16GB DDR4 / SSD 512GB</h3>
+        <p>PC Gamer Level One
+			</br>Modelo: QCK0405
+			</br>Cor: Preta
+			</br>PN: 010000416</p>
+        <p><a class="btn btn-secondary" href="#">Ver Especificação Técnica &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="img/pc3.png" class="bd-placeholder-img bg-warning rounded-circle" width="140" height="140">
-        <h2 class="fw-normal">Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <h3 class="fw-normal">I3 8100 / 8GB DDR4 / HDD 1TB / GTX 1050 TI</h3>
+        <p>PC Gamer Level One
+			</br>Modelo: QCK0406
+			</br>Cor: Preta
+			</br>PN: 010000417</p>
+        <p><a class="btn btn-secondary" href="#">Ver Especificação Técnica &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -186,11 +198,35 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Especificação Técnica</h2>
+        <p class="lead">Processador: AMD Ryzen 3 3200G, 3.6GHz (4GHz Max Turbo) 4-Core, 4-Threads, 4MB Cache, AM4
+					</br>- Gráficos integrados no processador: Radeon Vega 8 Graphics
+					</br>- Núcleos: 8
+					</br>- Frequência gráfica: 1250MHz
+
+					</br>Cooler RGB para processador Gamma 200 Gamemax
+
+					</br>Placa mãe: A320M-K/BR Asus
+					</br>- Memória: 2 DIMM máximo 32GB DDR4 3200
+					</br>- PCIe 3.0/2.0 x16 (modo x16): 1 (opcional: placa de vídeo PCIe)
+
+					</br>Memória instalada: 8GB (2x 4GB) DDR4 2666 Adata
+
+					</br>SDD: 512GB, M2
+
+					</br>Fonte de alimentação 400W GP400A, 80 Plus Bronze, Gamemax
+
+					</br>Gabinete Dark Ranger Black H605-TR Gamemax
+					</br>- Painel traseiro: 1 Fan RGB Rainbow FN-12Rainbow-C
+					</br>- Painel superior: 2 Fans (opcional)
+					</br>- Tampa lateral: Vidro temperado
+
+					</br>Qualidade certficada: PC Gamer QuickPC é fabricado de acordo com sistema de gestão da qualidade ISO-9001.
+
+					</br>Garantia: 1 ano contra defeitos de fabricação, sendo 3 meses referentes à garantia legal, nos termos do artigo 26, II, do Código de Defesa do Consumidor + 9 meses de garantia do fabricante.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="img/foto1.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/>
 
       </div>
     </div>
@@ -199,11 +235,35 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Especificação Técnica</h2>
+        <p class="lead">Processador: AMD Ryzen 3 3200G, 3.6GHz (4GHz Max Turbo) 4-Core, 4-Threads, 4MB Cache, AM4
+												</br>- Gráficos integrados no processador: Radeon Vega 8 Graphics
+												</br>- Núcleos: 8
+												</br>- Frequência gráfica: 1250MHz
+
+												</br>Cooler RGB para processador Gamma 200 Gamemax
+
+												</br>Placa mãe: A320M-K/BR Asus
+												</br>- Memória: 2 DIMM máximo 32GB DDR4 3200
+												</br>- PCIe 3.0/2.0 x16 (modo x16): 1 (opcional: placa de vídeo PCIe)
+
+												</br>Memória instalada: 16GB (2x 8GB) DDR4 3000 Adata XPG D10
+
+												</br>SDD: 512GB, M2
+
+												</br>Fonte de alimentação 400W GP400A, 80 Plus Bronze, Gamemax
+
+												</br>Gabinete Dark Ranger Black H605-TR Gamemax
+												</br>- Painel traseiro: 1 Fan RGB Rainbow FN-12Rainbow-C
+												</br>- Painel superior: 2 Fans (opcional)
+												</br>- Tampa lateral: Vidro temperado
+
+												</br>Qualidade certficada: PC Gamer QuickPC é fabricado de acordo com sistema de gestão da qualidade ISO-9001.
+
+												</br>Garantia: 1 ano contra defeitos de fabricação, sendo 3 meses referentes à garantia legal, nos termos do artigo 26, II, do Código de Defesa do Consumidor + 9 meses de garantia do fabricante.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="img/foto2.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/>
 
       </div>
     </div>
@@ -212,11 +272,41 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Especificação Técnica</h2>
+        <p class="lead">Processador: Intel Core i3-8100, 3.6GHz, 4-Core, 4-Threads, 6MB Cache
+					</br>- Gráficos integrados no processador: UHD Intel 630
+					</br>- Frequência da base grafica: 350MHz
+					</br>- Frequência dinamica da placa grafica: 1,1GHz
+					</br>- Suporte para 4K 60Hz: Sim
+					</br>- Monitores suportados: 3
+
+					</br>Cooler RGB para processador Gamma 200 Gamemax
+
+					</br>Placa mãe: Asus TUF H310M-Plus Gaming/BR
+					</br>- Memória: 2 DIMM máximo 32GB DDR4
+					</br>- PCIe 3.0/2.0 x16 (modo x16): 1
+					</br>- PCIe 3.0 x1: 3
+
+					</br>- Conectividade: LAN Gigabit (10/100/1000MBps)
+
+					</br>Memória instalada: 8GB (1x 8GB) DDR4 3200 Adata
+
+					</br>HDD: 1TB, SATA3
+
+					</br>Placa de video PCIe nVIDIA GTX 1050 Ti 4GB
+
+					</br>Fonte de alimentação 650W GP650, 80 Plus Bronze, Gamemax
+
+					</br>Gabinete Optical G510-D Gamemax
+					</br>- Painel frontal 3 Fan 120 mm FN-12Rainbow-D
+					</br>- Tampa lateral acrilico
+
+					</br>Qualidade certificada: PC Gamer QuickPC é fabricado de acordo com sistema de gestão da qualidade ISO-9001.
+
+					</br>Garantia: 1 ano contra defeitos de fabricação, sendo 3 meses referentes à garantia legal, nos termos do artigo 26, II, do Código de Defesa do Consumidor + 9 meses de garantia do fabricante.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="img/foto3.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/>
 
       </div>
     </div>
@@ -230,14 +320,20 @@
 
   <!-- FOOTER -->
   <footer class="container">
-    <p class="float-end"><a href="#">Back to top</a></p>
     <p>&copy; 2017–2022 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
-	<i class="fa-brands fa-facebook fa-3x"></i>
-	<i class="fa-brands fa-instagram fa-3x"></i>
-	<i class="fa-brands fa-linkedin fa-3x"></i>
 	<i class="fa-brands fa-youtube fa-3x"></i>
-  </p></footer>
+	<i class="fa-brands fa-linkedin fa-3x"></i>
+	<i class="fa-brands fa-instagram fa-3x"></i>
+	<i class="fa-brands fa-facebook fa-3x"></i>
+  </p>
+</footer>
+
+<figure class="whatsapp">
+		<a title="Entre em contato pelo WhatsApp" href="https://api.whatsapp.com/send?phone=31996747875" target="_blank"><i class="fa-brands fa-whatsapp fa-3x"></i></a>
+</figure>
+
 </main>
+
 
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
